--- a/app/src/main/res/layout/activity_sign_up_patient.xml
+++ b/app/src/main/res/layout/activity_sign_up_patient.xml
@@ -104,6 +104,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="32dp"
+                android:inputType="textEmailAddress"
                 android:background="@drawable/custom_input_maroon"
                 android:drawablePadding="12dp"
                 android:ems="10"
@@ -118,6 +119,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="32dp"
+                android:inputType="textPassword"
                 android:background="@drawable/custom_input_maroon"
                 android:drawablePadding="12dp"
                 android:ems="10"
