--- a/app/src/main/res/layout/activity_admin_exercise_prescription_modify.xml
+++ b/app/src/main/res/layout/activity_admin_exercise_prescription_modify.xml
@@ -23,12 +23,12 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="60dp"
                 android:layout_marginEnd="32dp"
-                android:background="@drawable/custom_input_white_blue"
+                android:background="@drawable/custom_input_grey_blue"
                 android:drawablePadding="12dp"
                 android:ems="10"
                 android:hint="Name"
                 android:paddingLeft="10dp"
-                android:textColor="@color/black" />
+                android:textColor="@color/white" />
 
             <EditText
                 android:id="@+id/weekET"
@@ -61,7 +61,7 @@
             <EditText
                 android:id="@+id/intensityET"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="50dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="32dp"
@@ -75,7 +75,7 @@
             <EditText
                 android:id="@+id/aerobicET"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="50dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="32dp"
