--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Forgot Password? Reset Now"
-        android:textColor="@color/black"
+        android:textColor="@color/blue"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,6 +49,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="100dp"
         android:layout_marginEnd="32dp"
+        android:inputType="textEmailAddress"
         android:background="@drawable/custom_input_white_blue"
         android:drawablePadding="12dp"
         android:ems="10"
@@ -70,6 +71,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
+        android:inputType="textPassword"
         android:background="@drawable/custom_input_white_blue"
         android:drawablePadding="12dp"
         android:ems="10"
