--- a/app/src/main/res/layout/activity_sign_up_doctor.xml
+++ b/app/src/main/res/layout/activity_sign_up_doctor.xml
@@ -39,6 +39,7 @@
       android:layout_marginStart="32dp"
       android:layout_marginTop="8dp"
       android:layout_marginEnd="32dp"
+      android:inputType="textPassword"
       android:background="@drawable/custom_input_white_blue"
       android:drawablePadding="12dp"
       android:ems="10"
@@ -59,6 +60,7 @@
       android:layout_marginStart="32dp"
       android:layout_marginTop="8dp"
       android:layout_marginEnd="32dp"
+      android:inputType="textEmailAddress"
       android:background="@drawable/custom_input_white_blue"
       android:drawablePadding="12dp"
       android:ems="10"
@@ -99,6 +101,7 @@
       android:layout_marginStart="32dp"
       android:layout_marginTop="32dp"
       android:layout_marginEnd="32dp"
+      android:inputType="textPersonName"
       android:background="@drawable/custom_input_white_blue"
       android:drawablePadding="12dp"
       android:ems="10"
