--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -22,8 +22,7 @@
         android:textStyle="bold"
         android:textSize="22sp"
         android:textColor="@color/white"
-        android:textAlignment="center"
-        />
+        android:textAlignment="center" />
 
     <ImageView
         android:id="@+id/logoutBtn"
