--- a/app/src/main/res/layout/activity_admin_about.xml
+++ b/app/src/main/res/layout/activity_admin_about.xml
@@ -23,6 +23,7 @@
             android:id="@+id/imageView7"
             android:layout_width="match_parent"
             android:layout_height="220dp"
+            android:importantForAutofill="auto"
             app:srcCompat="@drawable/about_wallpaper" />
 
         <TextView
